# lambdifier

./: CMakeLists.txt
include/lambdifier/: autodiff.hpp  binary_operator.hpp  expression.hpp  function_call.hpp  llvm_state.hpp  math_functions.hpp  number.hpp  variable.hpp
include/lambdifier/detail/: check_symbol_name.hpp  fwd_decl.hpp  jit.hpp  string_conv.hpp  type_traits.hpp  visibility.hpp
src/: autodiff.cpp  binary_operator.cpp  expression.cpp  function_call.cpp  llvm_state.cpp  llvm_state_00.cpp  llvm_state_01.cpp  math_functions.cpp  number.cpp  variable.cpp
src/detail/: check_symbol_name.cpp  jit.cpp  string_conv.cpp
test/: CMakeLists.txt  autodiff_test.cpp  basic_test.cpp  bp_test.cpp  expression_test.cpp  gp_test.cpp  taylor_test.cpp
